--- a/Atividades/Exerciciosdegramatica/index - Copy (4).html
+++ b/Atividades/Exerciciosdegramatica/index - Copy (4).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -80,18 +80,6 @@
         }
         textarea.answer-input {
             resize: vertical; /* Permitimos redimensionar verticalmente se necessário */
-        }
-
-        /* Inputs para textos livres */
-        .free-text-input {
-            padding: 5px;
-            border: 1px solid #000; /* Bordas pretas */
-            border-radius: 5px;
-            font-size: 1rem;
-            width: 100%;
-            box-sizing: border-box; /* Garantir que padding conte no total */
-            margin-top: 5px;
-            margin-bottom: 15px;
         }
 
         /* Botões */
@@ -461,80 +449,14 @@
                 }
 
                 // 3) Linhas de múltipla escolha ou explicações (A), (B), ...
-                //    Se não contiver [Answer:] nem [FreeText], apenas exibe como texto normal
-                if (trimmedLine && !trimmedLine.includes('[Answer:') && !trimmedLine.includes('[FreeText]')) {
+                //    Se não contiver [Answer:], apenas exibe como texto normal
+                if (trimmedLine && !trimmedLine.includes('[Answer:')) {
                     htmlContent += `<div class="exercise-line">${trimmedLine}</div>`;
                     return;
                 }
 
-                // 4) Linhas que contêm ambos [Answer:] e [FreeText]
-                if (trimmedLine.includes('[Answer:') && trimmedLine.includes('[FreeText]')) {
-                    // Extrair partes
-                    let [questionPart, answerPartWithFreeText] = trimmedLine.split('[Answer:');
-                    const cleanAnswer = answerPartWithFreeText.split(']')[0].trim();
-
-                    // Verificar [size:small], [size:medium], [size:large], [size:huge], [size:essay]
-                    let inputSize = '150px'; // default
-                    let useTextarea = false;
-                    const sizeMatch = questionPart.match(/\[size:(.*?)\]/);
-
-                    if (sizeMatch) {
-                        const sizeValue = sizeMatch[1].trim();
-                        if (sizeValue === 'small') inputSize = '30px';
-                        if (sizeValue === 'medium') inputSize = '150px'; 
-                        if (sizeValue === 'large') inputSize = '300px'; 
-                        if (sizeValue === 'huge') inputSize = '800px'; 
-                        if (sizeValue === 'essay') {
-                            useTextarea = true;
-                            // Largura 100% + rows
-                        }
-                    }
-
-                    // Remover [size:..] do texto a ser exibido
-                    let displayQuestion = questionPart.replace(/\[size:.*?\]/, '').trim();
-
-                    if (!useTextarea) {
-                        // Substituir o "___" por input
-                        displayQuestion = displayQuestion.replace('___', `<input type="text" class="answer-input" style="width:${inputSize};" />`);
-                    } else {
-                        // Substituir o "___" por textarea
-                        displayQuestion = displayQuestion.replace('___', `<textarea rows="4" class="answer-input" style="width:100%;"></textarea>`);
-                    }
-
-                    // Adicionar o campo de resposta
-                    htmlContent += `
-                        <div class="exercise-line">
-                            ${displayQuestion}
-                            <span class="correct-answer-span"></span>
-                        </div>
-                    `;
-
-                    // Adicionar o campo de texto livre
-                    htmlContent += `
-                        <div class="exercise-line">
-                            <textarea class="free-text-input" placeholder="Digite aqui..."></textarea>
-                        </div>
-                    `;
-                    return;
-                }
-
-                // 5) Linhas de texto livre (não corrigidas)
-                if (trimmedLine.includes('[FreeText]') && !trimmedLine.includes('[Answer:')) {
-                    // Remover a marcação [FreeText] do texto a ser exibido
-                    let displayText = trimmedLine.replace('[FreeText]', '').trim();
-
-                    // Renderizar o texto seguido de um textarea para digitação livre
-                    htmlContent += `
-                        <div class="exercise-line">
-                            ${displayText}
-                            <textarea class="free-text-input" placeholder="Digite aqui..."></textarea>
-                        </div>
-                    `;
-                    return;
-                }
-
-                // 6) Quando encontramos [Answer:], tratamos como pergunta
-                if (trimmedLine.includes('[Answer:') && !trimmedLine.includes('[FreeText]')) {
+                // 4) Quando encontramos [Answer:], tratamos como pergunta
+                if (trimmedLine.includes('[Answer:')) {
                     let [questionPart, answerPart] = trimmedLine.split('[Answer:');
                     const cleanAnswer = answerPart.replace(']', '').trim();
 
@@ -582,28 +504,9 @@
             // Mapear todos os inputs/areas com suas respostas corretas
             let answerIndex = 0;
             linesFromFile.forEach((line) => {
-                if (line.includes('[Answer:') && !line.includes('[FreeText]')) {
+                if (line.includes('[Answer:')) {
                     let [qPart, aPart] = line.split('[Answer:');
                     const correctAnswer = aPart.replace(']', '').trim();
-
-                    // Localiza o input correspondente no DOM, na ordem que aparecem
-                    const inputElement = exercisesDiv.querySelectorAll('.answer-input')[answerIndex];
-                    const spanElement = exercisesDiv.querySelectorAll('.correct-answer-span')[answerIndex];
-
-                    if (inputElement && spanElement) {
-                        allInputs.push({
-                            input: inputElement,
-                            correctAnswer: correctAnswer,
-                            correctAnswerSpan: spanElement
-                        });
-                    }
-                    answerIndex++;
-                }
-
-                // Para linhas que contêm ambos [Answer:] e [FreeText], o input é seguido por um textarea
-                if (line.includes('[Answer:') && line.includes('[FreeText]')) {
-                    let [qPart, aPartWithFreeText] = line.split('[Answer:');
-                    const correctAnswer = aPartWithFreeText.split(']')[0].trim();
 
                     // Localiza o input correspondente no DOM, na ordem que aparecem
                     const inputElement = exercisesDiv.querySelectorAll('.answer-input')[answerIndex];
@@ -735,66 +638,24 @@
                     return;
                 }
 
-                // Se a linha não tiver [Answer:] nem [FreeText], imprime normal
-                if (line && !line.includes('[Answer:') && !line.includes('[FreeText]')) {
+                // Se a linha não tiver [Answer:], imprime normal
+                if (line && !line.includes('[Answer:')) {
                     drawWrappedText([line], 0, false);
                     return;
                 }
 
-                // Se a linha contiver ambos [Answer:] e [FreeText]
-                if (line.includes('[Answer:') && line.includes('[FreeText]')) {
-                    let [questionPart, answerPartWithFreeText] = line.split('[Answer:');
-                    const correctAnswer = answerPartWithFreeText.split(']')[0].trim();
-
-                    // Verificar [size:small], [size:medium], [size:large], [size:huge], [size:essay]
-                    let inputSize = '150px'; // default
-                    let useTextarea = false;
-                    const sizeMatch = questionPart.match(/\[size:(.*?)\]/);
-
-                    if (sizeMatch) {
-                        const sizeValue = sizeMatch[1].trim();
-                        if (sizeValue === 'small') inputSize = '30px';
-                        if (sizeValue === 'medium') inputSize = '150px'; 
-                        if (sizeValue === 'large') inputSize = '300px'; 
-                        if (sizeValue === 'huge') inputSize = '800px'; 
-                        if (sizeValue === 'essay') {
-                            useTextarea = true;
-                            // Largura 100% + rows
-                        }
-                    }
-
-                    // Remover [size:..] do texto a ser exibido
-                    let displayQuestion = questionPart.replace(/\[size:.*?\]/, '').trim();
-
-                    if (!useTextarea) {
-                        // Substituir o "___" por linhas
-                        displayQuestion = displayQuestion.replace('___', '____________________');
-                    } else {
-                        // Substituir o "___" por linhas (para textarea, geralmente mantemos)
-                        displayQuestion = displayQuestion.replace('___', '____________________');
-                    }
-
-                    // Adicionar a pergunta
-                    drawWrappedText([displayQuestion], 0, false);
+                // Se tiver [Answer:], trocamos o input pela linha em branco
+                if (line.includes('[Answer:')) {
+                    let [qPart] = line.split('[Answer:');
+                    
+                    // Remove [size:...] se existir
+                    qPart = qPart.replace(/\[size:.*?\]/, '').trim();
+                    // Substituir "___" por linhas
+                    // Se quiser mais espaço, podemos colocar mais underlines
+                    const questionText = qPart.replace('___', '____________________');
+                    
+                    drawWrappedText([questionText], 0, false);
                     currentY += 5; // Pequeno espaço após a linha
-
-                    // Adicionar uma linha em branco para a resposta
-                    const underline = '______________________________';
-                    drawWrappedText([underline], 0, false);
-                    currentY += 5; // Pequeno espaço após a linha
-
-                    return;
-                }
-
-                // Se a linha tiver [FreeText], substitui pela linha em branco
-                if (line.includes('[FreeText]') && !line.includes('[Answer:')) {
-                    let displayText = line.replace('[FreeText]', '').trim();
-                    drawWrappedText([displayText], 0, false);
-                    // Adicionar uma linha em branco para a resposta
-                    const underline = '______________________________';
-                    drawWrappedText([underline], 0, false);
-                    currentY += 5; // Pequeno espaço após a linha
-                    return;
                 }
 
                 // Adicionar uma linha em branco após o exercício
