--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>  
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,6 @@
         .container {
             max-width: 800px;
             margin: auto;
-            /* Não usamos fundo branco nem sombra, conforme instruções */
             padding: 20px;
             border-radius: 8px;
             position: relative;
@@ -87,6 +86,13 @@
             margin-left: 10px;
             vertical-align: bottom;
             min-height: 20px; /* Espaço para digitação */
+            cursor: text;
+        }
+
+        /* Torna o span editável */
+        .free-text-span[contenteditable="true"]:focus {
+            outline: none;
+            border-bottom: 2px solid #333;
         }
 
         /* Resposta certa ou errada */
@@ -183,7 +189,7 @@
             }
 
             .free-text-span {
-                width: 100px; /* Ajuste para telas pequenas */
+                width: 150px; /* Ajuste para telas pequenas */
             }
         }
     </style>
@@ -511,7 +517,7 @@
                     // Adicionar a linha de texto livre inline
                     htmlContent += `
                         <div class="exercise-line">
-                            <span class="free-text-span"></span>
+                            <span class="free-text-span" contenteditable="true"></span>
                         </div>
                     `;
                     return;
@@ -526,7 +532,7 @@
                     htmlContent += `
                         <div class="exercise-line">
                             ${displayText}
-                            <span class="free-text-span"></span>
+                            <span class="free-text-span" contenteditable="true"></span>
                         </div>
                     `;
                     return;
@@ -800,23 +806,22 @@
             // Por fim, gerar o PDF para download
             doc.save(`${lastTitle || 'activity'}.pdf`);
         }
-    }
 
-    // Ao carregar a página, primeiro nos certificamos de que o usuário está autenticado
-    document.addEventListener('DOMContentLoaded', () => {
-        ensureUserIsAuthenticated(() => {
-            // Depois de carregar userData, carregamos o conteúdo do exercício
-            loadContent();
+        // Ao carregar a página, primeiro nos certificamos de que o usuário está autenticado
+        document.addEventListener('DOMContentLoaded', () => {
+            ensureUserIsAuthenticated(() => {
+                // Depois de carregar userData, carregamos o conteúdo do exercício
+                loadContent();
 
-            // Após carregar o conteúdo, verificar o papel do usuário para exibir o botão "Generate PDF"
-            const generatePdfBtn = document.getElementById('generate-pdf-btn');
-            if (userData.role === 'professor' || userData.role === 'proprietario') {
-                generatePdfBtn.style.display = 'inline-block';
-            } else {
-                generatePdfBtn.style.display = 'none';
-            }
+                // Após carregar o conteúdo, verificar o papel do usuário para exibir o botão "Generate PDF"
+                const generatePdfBtn = document.getElementById('generate-pdf-btn');
+                if (userData.role === 'professor' || userData.role === 'proprietario') {
+                    generatePdfBtn.style.display = 'inline-block';
+                } else {
+                    generatePdfBtn.style.display = 'none';
+                }
+            });
         });
-    });
-</script>
+    </script>
 </body>
 </html>
